Fix: cellSize() and gridSize() correctly add the cells and they don't overflow the sketchpad size

--- a/style.css
+++ b/style.css
@@ -44,9 +44,8 @@ body {
 }
 
 .sketchpad div {
-    flex: 1;
     border: solid black 1px;
-    padding: 16px;
+    padding: 0px;
     box-sizing: border-box;
 }
 
